Fix too big gap between items

--- a/css/custom.css
+++ b/css/custom.css
@@ -385,7 +385,7 @@ body { font-family: sans-serif; }
 .grid-item img{
   width: 320px;
     height: 120px;
-  float: left;
+  display: inline-block;
   background: #D26;
   border: 2px solid #333;
   border-color: hsla(0, 0%, 0%, 0.5);
